tests/error/linear_errors/tuple_moved_parent_consume.err
Error: Copy violation (at $FILE:16:12)
   | 
14 |     t = (qubit(), 100)
15 |     use(t[0])
16 |     use_tup(t)
   |             ^ Variable `t` with non-copyable type `(qubit, int)` cannot be
   |               consumed ...

Note:
   | 
14 |     t = (qubit(), 100)
15 |     use(t[0])
   |         ---- ... since the member `t[0]` with non-copyable type `qubit`
   |              was already consumed here

Guppy compilation failed due to 1 previous error
